fix(package): Add java crypto modules for ssl handshake